trying to fix swagger
